# finance-quant-skills

./: .gitignore  AWESOME-QUANT.md  README.md  main.py  package.json  pyproject.toml
.claude-plugin/: marketplace.json
scripts/: dl-baostock-docs.ts  get-joinquant-docs.ts
skills/akquant/: SKILL.md
skills/akshare/: SKILL.md
skills/akshare-docs/: SKILL.md
skills/akshare-docs/references/: macro.md  stock.md
skills/akshare-docs/scripts/: crypto_data.py  option_data.py
skills/akshare/references/: api-catalog.md  fund.md  futures.md
skills/akshare/scripts/: bond_data.py  forex_data.py  fund_data.py  futures_data.py  index_data.py  macro_data.py  special_data.py  stock_data.py
skills/baostock/: SKILL.md
skills/baostock/references/: README.md  api.md  dl-bs-doc.ts
skills/baostock/scripts/: auth.py  financial_data.py  market_data.py  stock_info.py
skills/joinquant-docs/: SKILL.md
skills/jqdatasdk/: SKILL.md
skills/jqdatasdk/references/: api.md  jqdatasdk_quickstart.md
skills/jqdatasdk/scripts/: auth.py  factor_data.py  financial_data.py  market_data.py  stock_info.py
skills/miniqmt/: SKILL.md
skills/miniqmt/references/: question_function.md
skills/qmt-docs/: SKILL.md
skills/qmt-docs/references/: INDEX.md  joinquant-migration.md  overview.md
skills/tdxquant/: SKILL.md
skills/tdxquant/references/: backtest.md  dict.md  python-init.md  tq_api.md  tq_use_case.md
skills/tdxquant/scripts/: _tdx_init.py  calendar.py  etf_bond_data.py  financial_data.py  formula.py  market_data.py  sector_data.py  trade.py  (+1 more)
skills/tushare/: SKILL.md
(+59 files in other folders)
